--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,3 +1,7 @@
 {
-  "Язык": "English"
+  "Язык": "English",
+  "Страница не найдена": "Not Found Page",
+  "Произошла непредвиденная ошибка": "An unexpected error has occurred",
+  "Обновить страницу": "Refresh the page",
+  "throw-error": "Error"
 }
