add storybook, add loki

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,5 +3,7 @@
   "Страница не найдена": "Not Found Page",
   "Произошла непредвиденная ошибка": "An unexpected error has occurred",
   "Обновить страницу": "Refresh the page",
-  "throw-error": "Error"
+  "throw-error": "Error",
+  "Главная": "Main",
+  "О сайте": "About us"
 }
