--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,5 +3,7 @@
   "Страница не найдена": "Страница не найдена",
   "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
   "Обновить страницу": "Обновить страницу",
-  "throw-error": "Ошибка"
+  "throw-error": "Ошибка",
+  "Главная": "Главная",
+  "О сайте": "О сайте"
 }
