--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,5 +5,6 @@
   "Обновить страницу": "Refresh the page",
   "throw-error": "Error",
   "Главная": "Main",
-  "О сайте": "About us"
+  "О сайте": "About us",
+  "Переключить": "toggle"
 }
