--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -5,5 +5,6 @@
   "Обновить страницу": "Обновить страницу",
   "throw-error": "Ошибка",
   "Главная": "Главная",
-  "О сайте": "О сайте"
+  "О сайте": "О сайте",
+  "Переключить": "Переключить"
 }
