update Sidebar && add loki visual good

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,5 +6,6 @@
   "throw-error": "Error",
   "Главная": "Main",
   "О сайте": "About us",
-  "Переключить": "toggle"
+  "Переключить": "toggle",
+  "Короткий язык": "En"
 }
