--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,5 +6,6 @@
   "throw-error": "Ошибка",
   "Главная": "Главная",
   "О сайте": "О сайте",
-  "Переключить": "Переключить"
+  "Переключить": "Переключить",
+  "Короткий язык": "Ru"
 }
