--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,5 +7,6 @@
   "Главная": "Main",
   "О сайте": "About us",
   "Переключить": "toggle",
-  "Короткий язык": "En"
+  "Короткий язык": "En",
+  "Войти": "To come in"
 }
