--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -7,5 +7,6 @@
   "Главная": "Главная",
   "О сайте": "О сайте",
   "Переключить": "Переключить",
-  "Короткий язык": "Ru"
+  "Короткий язык": "Ru",
+  "Войти": "Войти"
 }
