update modal and jest

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -8,5 +8,7 @@
   "О сайте": "About us",
   "Переключить": "toggle",
   "Короткий язык": "En",
-  "Войти": "To come in"
+  "Войти": "To come in",
+  "Введите пароль": "Enter password",
+  "Введите имя": "Enter username"
 }
