--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -8,5 +8,7 @@
   "О сайте": "О сайте",
   "Переключить": "Переключить",
   "Короткий язык": "Ru",
-  "Войти": "Войти"
+  "Войти": "Войти",
+  "Введите пароль": "Введите пароль",
+  "Введите имя": "Введите имя"
 }
