--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -9,6 +9,8 @@
   "Переключить": "Переключить",
   "Короткий язык": "Ru",
   "Войти": "Войти",
+  "Выйти": "Выйти",
   "Введите пароль": "Введите пароль",
-  "Введите имя": "Введите имя"
+  "Введите имя": "Введите имя",
+  "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль"
 }
