add profile page

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -13,5 +13,6 @@
   "Введите пароль": "Enter password",
   "Введите имя": "Enter username",
   "Форма авторизации": "Authorization Form",
-  "Вы ввели неверный логин или пароль": "You entered an incorrect username or password"
+  "Вы ввели неверный логин или пароль": "You entered an incorrect username or password",
+  "Профиль": "Profile page"
 }
