--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -12,5 +12,6 @@
   "Выйти": "Выйти",
   "Введите пароль": "Введите пароль",
   "Введите имя": "Введите имя",
-  "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль"
+  "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль",
+  "Профиль": "Страница профиля"
 }
