--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -1,6 +1,15 @@
 {
-  "Профиль": "Профиль",
-  "Редактировать": "Редактировать",
   "Ваше имя": "Ваше имя",
-  "Ваша фамиля": "Ваша фамилия"
+  "Ваша фамиля": "Ваша фамилия",
+  "Ваш возраст": "Ваш возраст",
+  "Ваш город": "Ваш город",
+  "Ваш аватар": "Ваш аватар",
+  "Имя пользователя": "Имя пользователя",
+  "Попробуйте обновить страницу": "Попробуйте обновить страницу",
+  "Произошла ошибка при загрузке профиля": "Произошла ошибка при загрузке профиля",
+  "Серверная ошибка при сохранении": "Серверная ошибка при сохранении",
+  "Некорректный возраст": "Некорректный возраст",
+  "Некорректный регион": "Некорректный регион",
+  "Имя и фамилия обязательны": "Имя и фамилия обязательны",
+  "Данные не указаны": "Данные не указаны"
 }
