--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -13,5 +13,10 @@
   "Введите пароль": "Введите пароль",
   "Введите имя": "Введите имя",
   "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль",
-  "Профиль": "Страница профиля"
+  "Профиль": "Страница профиля",
+  "Редактировать": "Редактировать",
+  "Отменить": "Отменить",
+  "Укажите валюту": "Укажите валюту",
+  "Укажите страну": "Укажите страну",
+  "Сохранить": "Сохранить"
 }
