--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -19,5 +19,6 @@
   "Отменить": "Cancel",
   "Укажите валюту": "Indicate the currency",
   "Укажите страну": "Indicate the country",
-  "Сохранить": "Save"
+  "Сохранить": "Save",
+  "Статьи": "Articles"
 }
