--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -18,5 +18,6 @@
   "Отменить": "Отменить",
   "Укажите валюту": "Укажите валюту",
   "Укажите страну": "Укажите страну",
+  "Статьи": "Статьи",
   "Сохранить": "Сохранить"
 }
