test phone dark

--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -1,5 +1,6 @@
 {
   "Статья не найдена": "Статья не найдена",
   "Произошла ошибка при загрузке статьи": "Произошла ошибка при загрузке статьи",
-  "Успешно скопировано в буфер обмена!": "Успешно скопировано в буфер обмена!"
+  "Успешно скопировано в буфер обмена!": "Успешно скопировано в буфер обмена!",
+  "Копировать": "Копировать"
 }
