--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -20,5 +20,6 @@
   "Укажите валюту": "Indicate the currency",
   "Укажите страну": "Indicate the country",
   "Сохранить": "Save",
-  "Статьи": "Articles"
+  "Статьи": "Articles",
+  "There is no comment": "There is no comment"
 }
