--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -2,5 +2,8 @@
   "Статья не найдена": "Статья не найдена",
   "Произошла ошибка при загрузке статьи": "Произошла ошибка при загрузке статьи",
   "Успешно скопировано в буфер обмена!": "Успешно скопировано в буфер обмена!",
-  "Копировать": "Копировать"
+  "Копировать": "Копировать",
+  "Comments": "Комментарии",
+  "enter-the-text-of-the-comment": "Введите текст комментария",
+  "Send": "Отправить"
 }
