--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -19,5 +19,6 @@
   "Укажите валюту": "Укажите валюту",
   "Укажите страну": "Укажите страну",
   "Статьи": "Статьи",
-  "Сохранить": "Сохранить"
+  "Сохранить": "Сохранить",
+  "There is no comment": "Комментарии отсутствуют"
 }
