add list of articles

--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -5,5 +5,7 @@
   "Копировать": "Copy",
   "Comments": "Comments",
   "enter-the-text-of-the-comment": "Enter the text of the comment",
-  "Send": "Send"
+  "Send": "Send",
+  "read more": "Read more...",
+  "Back to the list": "Back to the list"
 }
