--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -5,5 +5,7 @@
   "Копировать": "Копировать",
   "Comments": "Комментарии",
   "enter-the-text-of-the-comment": "Введите текст комментария",
-  "Send": "Отправить"
+  "Send": "Отправить",
+  "read more": "Читать далее...",
+  "Back to the list": "Назад к списку"
 }
