--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -7,5 +7,6 @@
   "enter-the-text-of-the-comment": "Enter the text of the comment",
   "Send": "Send",
   "read more": "Read more...",
-  "Back to the list": "Back to the list"
+  "Back to the list": "Back to the list",
+  "oops-an-error-arose-go-later": "Oops... An error arose go later"
 }
