--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -7,5 +7,6 @@
   "enter-the-text-of-the-comment": "Введите текст комментария",
   "Send": "Отправить",
   "read more": "Читать далее...",
-  "Back to the list": "Назад к списку"
+  "Back to the list": "Назад к списку",
+  "oops-an-error-arose-go-later": "Упс... Возникла ошибка, зайди позже"
 }
