add type, add filters

--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -8,5 +8,17 @@
   "Send": "Send",
   "read more": "Read more...",
   "Back to the list": "Back to the list",
-  "oops-an-error-arose-go-later": "Oops... An error arose go later"
+  "oops-an-error-arose-go-later": "Oops... An error arose go later",
+  "Sort by": "Sort by",
+  "on": "On",
+  "increasing": "Increasing",
+  "descending": "Descending",
+  "The date of creation": "The date of creation",
+  "name": "Name",
+  "views": "Views",
+  "All articles": "All articles",
+  "it": "IT",
+  "economy": "Economy",
+  "science": "Science",
+  "articles-are-not-found": "Articles are not found"
 }
