update scrollbar, add recommendations

--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -20,5 +20,6 @@
   "it": "IT",
   "economy": "Economy",
   "science": "Science",
-  "articles-are-not-found": "Articles are not found"
+  "articles-are-not-found": "Articles are not found",
+  "we-recommend": "We recommend"
 }
