--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -20,5 +20,6 @@
   "it": "Айти",
   "economy": "Экономика",
   "science": "Наука",
-  "articles-are-not-found": "Статьи не найдены"
+  "articles-are-not-found": "Статьи не найдены",
+  "we-recommend": "Рекомендуем"
 }
