--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -21,5 +21,7 @@
   "Укажите страну": "Indicate the country",
   "Сохранить": "Save",
   "Статьи": "Articles",
-  "There is no comment": "There is no comment"
+  "There is no comment": "There is no comment",
+  "news": "News",
+  "create-an-article": "Create an article"
 }
