--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -20,5 +20,7 @@
   "Укажите страну": "Укажите страну",
   "Статьи": "Статьи",
   "Сохранить": "Сохранить",
-  "There is no comment": "Комментарии отсутствуют"
+  "There is no comment": "Комментарии отсутствуют",
+  "news": "Новостник",
+  "create-an-article": "Создать статью"
 }
