add admin panel + migrate React 18

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -23,5 +23,8 @@
   "Статьи": "Articles",
   "There is no comment": "There is no comment",
   "news": "News",
-  "create-an-article": "Create an article"
+  "create-an-article": "Create an article",
+  "my-profile": "Profile",
+  "adminka": "Admin",
+  "you-have-no-access-to-this-page": "You have no access to this page"
 }
