--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -22,5 +22,8 @@
   "Сохранить": "Сохранить",
   "There is no comment": "Комментарии отсутствуют",
   "news": "Новостник",
-  "create-an-article": "Создать статью"
+  "create-an-article": "Создать статью",
+  "my-profile": "Профиль",
+  "adminka": "Админка",
+  "you-have-no-access-to-this-page": "У вас нет доступа к этой странице"
 }
