add features flags and script remove feature

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -30,5 +30,6 @@
   "vash-otzyv": "Your feedback",
   "Your feedback": "Your feedback",
   "Close": "Close",
-  "Thanks for the feedback": "Thanks for the feedback!)"
+  "Thanks for the feedback": "Thanks for the feedback!)",
+  "article-rating-coming-soon": "Article rating coming soon"
 }
