--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -29,5 +29,6 @@
   "vash-otzyv": "Your feedback",
   "Your feedback": "Ваш отзыв",
   "Close": "Закрыть",
-  "Thanks for the feedback": "Спасибо за оценку!)"
+  "Thanks for the feedback": "Спасибо за оценку!)",
+  "article-rating-coming-soon": "Оценка статей скоро появится"
 }
