--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -13,7 +13,7 @@
   "Введите пароль": "Введите пароль",
   "Введите имя": "Введите имя",
   "Вы ввели неверный логин или пароль": "Вы ввели неверный логин или пароль",
-  "Профиль": "Страница профиля",
+  "Профиль": "Профиль",
   "Редактировать": "Редактировать",
   "Отменить": "Отменить",
   "Укажите валюту": "Укажите валюту",
