redesigned profile card

--- a/public/locales/en/profile.json
+++ b/public/locales/en/profile.json
@@ -1,10 +1,10 @@
 {
-  "Ваше имя": "Your name",
-  "Ваша фамиля": "Your Firstname",
-  "Ваш возраст": "Your age",
-  "Ваш город": "Your city",
+  "Ваше имя": "Name",
+  "Ваша фамиля": "Firstname",
+  "Ваш возраст": "Age",
+  "Ваш город": "City",
   "Имя пользователя": "Username",
-  "Ваш аватар": "Your avatar",
+  "Ваш аватар": "Avatar",
   "Попробуйте обновить страницу": "Try refreshing the page",
   "Произошла ошибка при загрузке профиля": "An error occurred while loading the profile",
   "Серверная ошибка при сохранении": "Server error while maintaining",
