--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -1,9 +1,9 @@
 {
-  "Ваше имя": "Ваше имя",
-  "Ваша фамиля": "Ваша фамилия",
-  "Ваш возраст": "Ваш возраст",
-  "Ваш город": "Ваш город",
-  "Ваш аватар": "Ваш аватар",
+  "Ваше имя": "Имя",
+  "Ваша фамиля": "Фамилия",
+  "Ваш возраст": "Возраст",
+  "Ваш город": "Город",
+  "Ваш аватар": "Аватар",
   "Имя пользователя": "Имя пользователя",
   "Попробуйте обновить страницу": "Попробуйте обновить страницу",
   "Произошла ошибка при загрузке профиля": "Произошла ошибка при загрузке профиля",
