add ui design swither

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -31,5 +31,6 @@
   "Your feedback": "Your feedback",
   "Close": "Close",
   "Thanks for the feedback": "Thanks for the feedback!)",
-  "article-rating-coming-soon": "Article rating coming soon"
+  "article-rating-coming-soon": "Article rating coming soon",
+  "nastroiki": "Settings"
 }
