--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -30,5 +30,6 @@
   "Your feedback": "Ваш отзыв",
   "Close": "Закрыть",
   "Thanks for the feedback": "Спасибо за оценку!)",
-  "article-rating-coming-soon": "Оценка статей скоро появится"
+  "article-rating-coming-soon": "Оценка статей скоро появится",
+  "nastroiki": "Настройки"
 }
